syntax = "proto3";

package event;

option go_package = "./;calendarpb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

service calendar {
    rpc CreateEvent(Event) returns (Result) {}

	rpc UpdateEvent(Event) returns (Result) {}

	rpc DeleteEvent(Event) returns (Result) {}

	rpc GetAllEventsDay(TimeSpec) returns (Result) {}

	rpc GetAllEventsWeek(TimeSpec) returns (Result) {}

	rpc GetAllEventsMonth(TimeSpec) returns (Result) {}
}

message TimeSpec {
    google.protobuf.Timestamp stamp = 1;
}

message Result {
    bool is_ok = 1;
    optional string errmsg = 2;
    repeated Event events = 3;
}

message Event {
	string ID = 1;
	string Title = 2;
	google.protobuf.Timestamp StartTime = 3;
	google.protobuf.Duration Duration = 4;
	string Description  = 5;
	int64 UserID       = 6;
	google.protobuf.Duration NotifyTime  = 7;
}
